[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/forward.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/backward.png" type="Texture" id=2]
[ext_resource path="res://src/ui/OptionSwitcher.gd" type="Script" id=3]
[ext_resource path="res://assets/theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_top = 8.0

[node name="OptionSwitcher" type="Control"]
anchor_right = 1.0
margin_bottom = -654.0
rect_min_size = Vector2( 0, 66 )
focus_mode = 2
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 50.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 54.0
margin_right = 1226.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 66 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/normal = SubResource( 1 )
text = "Option"
align = 1

[node name="ForwardButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 1230.0
margin_top = 8.0
margin_right = 1280.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_OptionSwitcher_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_OptionSwitcher_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_OptionSwitcher_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_OptionSwitcher_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_up" from="VBoxContainer/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_down" from="VBoxContainer/ForwardButton" to="." method="_on_ForwardButton_button_down"]
[connection signal="button_up" from="VBoxContainer/ForwardButton" to="." method="_on_ForwardButton_button_up"]
